umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@zinc_0072_OC1(CCCC1)C([O-])=O.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C6O3-
    atom_count: 9
    bond_count: 9
